// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player connected snapshot tests Player connected snapshot 1`] = `
<div
  class="modal"
>
  <div
    class="player connected"
    role="dialog"
    title="player connected"
  >
    <p>
      Player has 
      connected
      !
    </p>
    <button
      title="New Game"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`Player connected snapshot tests Player disconnected snapshot 1`] = `
<div
  class="modal"
>
  <div
    class="player connected"
    role="dialog"
    title="player connected"
  >
    <p>
      Player has 
      disconnected
      !
    </p>
    <button
      title="New Game"
    >
      Close
    </button>
  </div>
</div>
`;
